--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "payload": "3.0.0-beta.76",
     "payload-admin-bar": "^1.0.6",
     "prism-react-renderer": "^2.3.1",
+    "qs": "^6.13.0",
     "react": "19.0.0-rc-06d0b89e-20240801",
     "react-dom": "19.0.0-rc-06d0b89e-20240801",
     "react-hook-form": "7.45.4",
@@ -75,6 +76,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "@types/escape-html": "^1.0.4",
     "@types/node": "18.11.3",
+    "@types/qs": "^6.9.15",
     "@types/react": "npm:types-react@19.0.0-rc.0",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.0",
     "autoprefixer": "^10.4.19",
