fixed ecom cart

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "babel-plugin-react-compiler": "0.0.0-experimental-334f00b-20240725",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
@@ -60,11 +61,13 @@
     "next": "15.0.0-canary.104",
     "next-intl": "^3.17.2",
     "next-nprogress-bar": "^2.3.13",
+    "next-themes": "^0.3.0",
     "payload": "3.0.0-beta.76",
     "payload-admin-bar": "^1.0.6",
     "prism-react-renderer": "^2.3.1",
     "qs": "^6.13.0",
     "react": "19.0.0-rc-06d0b89e-20240801",
+    "react-compiler": "^1.0.3",
     "react-dom": "19.0.0-rc-06d0b89e-20240801",
     "react-hook-form": "7.45.4",
     "sharp": "0.32.6",
