--- a/package.json
+++ b/package.json
@@ -18,21 +18,21 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-   "@medusajs/js-sdk": "preview",
+    "@medusajs/js-sdk": "preview",
     "@medusajs/types": "preview",
     "@medusajs/ui": "preview",
-    "@payloadcms/db-mongodb": "3.0.0-beta.68",
-    "@payloadcms/live-preview-react": "3.0.0-beta.68",
-    "@payloadcms/next": "3.0.0-beta.68",
-    "@payloadcms/plugin-cloud": "3.0.0-beta.68",
-    "@payloadcms/plugin-form-builder": "3.0.0-beta.68",
-    "@payloadcms/plugin-nested-docs": "3.0.0-beta.68",
-    "@payloadcms/plugin-redirects": "3.0.0-beta.68",
-    "@payloadcms/plugin-seo": "3.0.0-beta.68",
-    "@payloadcms/plugin-stripe": "3.0.0-beta.68",
-    "@payloadcms/richtext-lexical": "3.0.0-beta.68",
-    "@payloadcms/storage-s3": "3.0.0-beta.68",
-    "@payloadcms/ui": "3.0.0-beta.68",
+    "@payloadcms/db-mongodb": "beta",
+    "@payloadcms/live-preview-react": "beta",
+    "@payloadcms/next": "beta",
+    "@payloadcms/plugin-cloud": "beta",
+    "@payloadcms/plugin-form-builder": "beta",
+    "@payloadcms/plugin-nested-docs": "beta",
+    "@payloadcms/plugin-redirects": "beta",
+    "@payloadcms/plugin-seo": "beta",
+    "@payloadcms/plugin-stripe": "beta",
+    "@payloadcms/richtext-lexical": "beta",
+    "@payloadcms/storage-s3": "beta",
+    "@payloadcms/ui": "beta",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -68,15 +68,15 @@
     "lexical": "0.16.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.378.0",
-    "next": "15.0.0-canary.53",
+    "next": "15.0.0-canary.173",
     "next-intl": "^3.17.2",
     "next-themes": "^0.3.0",
-    "payload": "3.0.0-beta.68",
+    "payload": "beta",
     "payload-admin-bar": "^1.0.6",
     "prism-react-renderer": "^2.3.1",
     "qs": "^6.13.0",
-    "react": "19.0.0-rc-6230622a1a-20240610",
-    "react-dom": "19.0.0-rc-6230622a1a-20240610",
+    "react": "19.0.0-rc-3edc000d-20240926",
+    "react-dom": "19.0.0-rc-3edc000d-20240926",
     "react-hook-form": "7.45.4",
     "sharp": "0.32.6",
     "sonner": "^1.5.0",
@@ -93,31 +93,31 @@
     "@payloadcms/eslint-config": "^1.1.1",
     "@tailwindcss/typography": "^0.5.13",
     "@types/escape-html": "^1.0.4",
-    "@types/node": "^20.12.12",
     "@types/qs": "^6.9.15",
     "@types/lodash": "^4.17.7",
-    "@types/react": "npm:types-react@19.0.0-rc.0",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.0",
+    "@types/node": "22.5.4",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "autoprefixer": "^10.4.19",
     "copyfiles": "^2.4.1",
     "eslint": "^8.57.0",
-    "eslint-config-next": "15.0.0-canary.53",
+    "eslint-config-next": "15.0.0-canary.173",
     "postcss": "^8.4.40",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.7",
-    "typescript": "5.5.4"
+    "typescript": "5.6.2"
   },
   "engines": {
     "node": "^18.20.2 || >=20.9.0"
   },
   "pnpm": {
     "overrides": {
-      "@types/react": "npm:types-react@19.0.0-rc.0",
-      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.0"
+      "@types/react": "npm:types-react@19.0.0-rc.1",
+      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
     }
   },
   "overrides": {
-    "@types/react": "npm:types-react@19.0.0-rc.0",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.0"
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   }
 }
