--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "geist": "^1.3.1",
     "graphql": "^16.9.0",
     "jsonwebtoken": "9.0.1",
-    "lexical": "0.16.1",
+    "lexical": "0.18.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.378.0",
     "next": "15.0.0-canary.173",
@@ -93,9 +93,10 @@
     "@payloadcms/eslint-config": "^1.1.1",
     "@tailwindcss/typography": "^0.5.13",
     "@types/escape-html": "^1.0.4",
-    "@types/qs": "^6.9.15",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.7",
     "@types/node": "22.5.4",
+    "@types/qs": "^6.9.15",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "autoprefixer": "^10.4.19",
