--- a/package.json
+++ b/package.json
@@ -18,18 +18,18 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@payloadcms/db-mongodb": "3.0.0-beta.114",
-    "@payloadcms/live-preview-react": "3.0.0-beta.114",
-    "@payloadcms/next": "3.0.0-beta.114",
-    "@payloadcms/plugin-cloud": "3.0.0-beta.114",
-    "@payloadcms/plugin-form-builder": "3.0.0-beta.114",
-    "@payloadcms/plugin-nested-docs": "3.0.0-beta.114",
-    "@payloadcms/plugin-redirects": "3.0.0-beta.114",
-    "@payloadcms/plugin-seo": "3.0.0-beta.114",
-    "@payloadcms/plugin-stripe": "3.0.0-beta.114",  
-    "@payloadcms/richtext-lexical": "3.0.0-beta.114",
-    "@payloadcms/storage-s3": "3.0.0-beta.114",
-    "@payloadcms/ui": "3.0.0-beta.114",
+    "@payloadcms/db-mongodb": "beta",
+    "@payloadcms/live-preview-react": "beta",
+    "@payloadcms/next": "beta",
+    "@payloadcms/plugin-cloud": "beta",
+    "@payloadcms/plugin-form-builder": "beta",
+    "@payloadcms/plugin-nested-docs": "beta",
+    "@payloadcms/plugin-redirects": "beta",
+    "@payloadcms/plugin-seo": "beta",
+    "@payloadcms/plugin-stripe": "beta",
+    "@payloadcms/richtext-lexical": "beta",
+    "@payloadcms/storage-s3": "beta",
+    "@payloadcms/ui": "beta",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -59,7 +59,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
-    "embla-carousel-react": "^8.1.8",
+    "embla-carousel-react": "^8.3.0",
     "framer-motion": "12.0.0-alpha.0",
     "geist": "^1.3.1",
     "graphql": "^16.9.0",
@@ -68,9 +68,9 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.378.0",
     "next": "15.0.0-canary.173",
-    "next-intl": "^3.17.2", 
+    "next-intl": "^3.17.2",
     "next-themes": "^0.3.0",
-    "payload": "3.0.0-beta.114",
+    "payload": "beta",
     "payload-admin-bar": "^1.0.6",
     "prism-react-renderer": "^2.3.1",
     "qs": "^6.13.0",
