--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "cross-env NODE_OPTIONS=--no-deprecation next build",
-    "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev",
+    "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev --turbo",
     "dev:prod": "cross-env NODE_OPTIONS=--no-deprecation rm -rf .next && pnpm build && pnpm serve",
     "generate:types": "cross-env NODE_OPTIONS=--no-deprecation payload generate:types",
     "ii": "cross-env NODE_OPTIONS=--no-deprecation pnpm --ignore-workspace install",
@@ -67,15 +67,15 @@
     "lexical": "0.18.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.378.0",
-    "next": "15.0.0-canary.173",
+    "next": "15.0.0",
     "next-intl": "^3.17.2",
     "next-themes": "^0.3.0",
     "payload": "beta",
     "payload-admin-bar": "^1.0.6",
     "prism-react-renderer": "^2.3.1",
     "qs": "^6.13.0",
-    "react": "19.0.0-rc-3edc000d-20240926",
-    "react-dom": "19.0.0-rc-3edc000d-20240926",
+    "react": "19.0.0-rc-65a56d0e-20241020",
+    "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "react-hook-form": "7.45.4",
     "sharp": "0.32.6",
     "sonner": "^1.5.0",
@@ -88,7 +88,7 @@
   "devDependencies": {
     "@medusajs/client-types": "preview",
     "@medusajs/ui-preset": "preview",
-    "@next/eslint-plugin-next": "14.2.5",
+    "@next/eslint-plugin-next": "15.0.0",
     "@payloadcms/eslint-config": "^1.1.1",
     "@tailwindcss/typography": "^0.5.13",
     "@types/escape-html": "^1.0.4",
@@ -100,12 +100,12 @@
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "autoprefixer": "^10.4.19",
     "copyfiles": "^2.4.1",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "15.0.0-canary.173",
+    "eslint": "9.13.0",
+    "eslint-config-next": "15.0.0",
     "postcss": "^8.4.40",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.7",
-    "typescript": "5.6.2"
+    "tailwindcss": "^3.4.14",
+    "typescript": "5.6.3"
   },
   "engines": {
     "node": "^18.20.2 || >=20.9.0"
