--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
+    "embla-carousel-autoplay": "^8.3.0",
+    "embla-carousel-fade": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "12.0.0-alpha.0",
     "geist": "^1.3.1",
