Added Home Page Blocks

--- a/package.json
+++ b/package.json
@@ -18,18 +18,17 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@payloadcms/db-mongodb": "beta",
-    "@payloadcms/live-preview-react": "beta",
-    "@payloadcms/next": "beta",
-    "@payloadcms/plugin-cloud": "beta",
-    "@payloadcms/plugin-form-builder": "beta",
-    "@payloadcms/plugin-nested-docs": "beta",
-    "@payloadcms/plugin-redirects": "beta",
-    "@payloadcms/plugin-seo": "beta",
-    "@payloadcms/plugin-stripe": "beta",
-    "@payloadcms/richtext-lexical": "beta",
-    "@payloadcms/storage-s3": "beta",
-    "@payloadcms/ui": "beta",
+    "@payloadcms/db-mongodb": "3.0.0-beta.119",
+    "@payloadcms/live-preview-react": "3.0.0-beta.119",
+    "@payloadcms/next": "3.0.0-beta.119",
+    "@payloadcms/plugin-form-builder": "3.0.0-beta.119",
+    "@payloadcms/plugin-nested-docs": "3.0.0-beta.119",
+    "@payloadcms/plugin-redirects": "3.0.0-beta.119",
+    "@payloadcms/plugin-seo": "3.0.0-beta.119",
+    "@payloadcms/plugin-stripe": "3.0.0-beta.119",
+    "@payloadcms/richtext-lexical": "3.0.0-beta.119",
+    "@payloadcms/storage-s3": "3.0.0-beta.119",
+    "@payloadcms/ui": "3.0.0-beta.119",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -52,10 +51,6 @@
     "@t3-oss/env-nextjs": "^0.11.0",
     "@tanstack/react-query": "latest",
     "@tanstack/react-query-devtools": "latest",
-    "@trpc/client": "next",
-    "@trpc/next": "next",
-    "@trpc/react-query": "next",
-    "@trpc/server": "next",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
@@ -72,7 +67,8 @@
     "next": "15.0.0",
     "next-intl": "^3.17.2",
     "next-themes": "^0.3.0",
-    "payload": "beta",
+    "nuqs": "^2.0.4",
+    "payload": "3.0.0-beta.119",
     "payload-admin-bar": "^1.0.6",
     "prism-react-renderer": "^2.3.1",
     "qs": "^6.13.0",
@@ -88,8 +84,6 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@medusajs/client-types": "preview",
-    "@medusajs/ui-preset": "preview",
     "@next/eslint-plugin-next": "15.0.0",
     "@payloadcms/eslint-config": "^1.1.1",
     "@tailwindcss/typography": "^0.5.13",
