--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-email/components": "^0.0.22",
+    "@stitches/core": "^1.2.8",
     "@stripe/react-stripe-js": "^2.7.3",
     "@stripe/stripe-js": "^4.2.0",
     "@t3-oss/env-nextjs": "^0.11.0",
@@ -75,6 +76,7 @@
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "react-hook-form": "7.45.4",
+    "react-icons": "^5.3.0",
     "sharp": "0.32.6",
     "sonner": "^1.5.0",
     "stripe": "17.2.0",
