Fixed some errors, built successfully

--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@payloadcms/db-mongodb": "3.0.0-beta.119",
-    "@payloadcms/live-preview-react": "3.0.0-beta.119",
-    "@payloadcms/next": "3.0.0-beta.119",
-    "@payloadcms/plugin-form-builder": "3.0.0-beta.119",
-    "@payloadcms/plugin-nested-docs": "3.0.0-beta.119",
-    "@payloadcms/plugin-redirects": "3.0.0-beta.119",
-    "@payloadcms/plugin-seo": "3.0.0-beta.119",
-    "@payloadcms/plugin-stripe": "3.0.0-beta.119",
-    "@payloadcms/richtext-lexical": "3.0.0-beta.119",
-    "@payloadcms/storage-s3": "3.0.0-beta.119",
-    "@payloadcms/ui": "3.0.0-beta.119",
+    "@payloadcms/db-mongodb": "beta",
+    "@payloadcms/live-preview-react": "beta",
+    "@payloadcms/next": "beta",
+    "@payloadcms/plugin-form-builder": "beta",
+    "@payloadcms/plugin-nested-docs": "beta",
+    "@payloadcms/plugin-redirects": "beta",
+    "@payloadcms/plugin-seo": "beta",
+    "@payloadcms/plugin-stripe": "beta",
+    "@payloadcms/richtext-lexical": "beta",
+    "@payloadcms/storage-s3": "beta",
+    "@payloadcms/ui": "beta",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -69,7 +69,7 @@
     "next-intl": "^3.17.2",
     "next-themes": "^0.3.0",
     "nuqs": "^2.0.4",
-    "payload": "3.0.0-beta.119",
+    "payload": "beta",
     "payload-admin-bar": "^1.0.6",
     "prism-react-renderer": "^2.3.1",
     "qs": "^6.13.0",
@@ -86,7 +86,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "15.0.0",
+    "@next/eslint-plugin-next": "^13.1.6",
     "@payloadcms/eslint-config": "^1.1.1",
     "@tailwindcss/typography": "^0.5.13",
     "@types/escape-html": "^1.0.4",
@@ -98,7 +98,7 @@
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "autoprefixer": "^10.4.19",
     "copyfiles": "^2.4.1",
-    "eslint": "9.13.0",
+    "eslint": "^8",
     "eslint-config-next": "15.0.0",
     "postcss": "^8.4.40",
     "prettier": "^3.3.3",
