--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "Website template for Payload",
   "license": "MIT",
-  "type": "module",
   "scripts": {
     "build": "cross-env NODE_OPTIONS=--no-deprecation next build",
     "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev --turbo",
@@ -28,10 +27,11 @@
     "@payloadcms/plugin-stripe": "beta",
     "@payloadcms/richtext-lexical": "beta",
     "@payloadcms/storage-s3": "beta",
+    "@payloadcms/translations": "3.0.0-beta.29",
     "@payloadcms/ui": "beta",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
@@ -54,6 +54,7 @@
     "@tanstack/react-query-devtools": "latest",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "cross-env": "^7.0.3",
     "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-fade": "^8.3.0",
@@ -69,6 +70,7 @@
     "next-intl": "^3.17.2",
     "next-themes": "^0.3.0",
     "nuqs": "^2.0.4",
+    "papaparse": "^5.4.1",
     "payload": "beta",
     "payload-admin-bar": "^1.0.6",
     "prism-react-renderer": "^2.3.1",
@@ -93,14 +95,15 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.7",
     "@types/node": "22.5.4",
+    "@types/papaparse": "^5.3.15",
     "@types/qs": "^6.9.15",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
     "copyfiles": "^2.4.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.0",
-    "postcss": "^8.4.40",
+    "postcss": "8.4.38",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.14",
     "typescript": "5.6.3"
