feat: added filters for shop swimspas/hottubs

--- a/package.json
+++ b/package.json
@@ -17,18 +17,19 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@payloadcms/db-mongodb": "beta",
-    "@payloadcms/live-preview-react": "beta",
-    "@payloadcms/next": "beta",
-    "@payloadcms/plugin-form-builder": "beta",
-    "@payloadcms/plugin-nested-docs": "beta",
-    "@payloadcms/plugin-redirects": "beta",
-    "@payloadcms/plugin-seo": "beta",
-    "@payloadcms/plugin-stripe": "beta",
-    "@payloadcms/richtext-lexical": "beta",
-    "@payloadcms/storage-s3": "beta",
+    "@number-flow/react": "^0.4.1",
+    "@payloadcms/db-mongodb": "3.1.1",
+    "@payloadcms/live-preview-react": "3.1.1",
+    "@payloadcms/next": "3.1.1",
+    "@payloadcms/plugin-form-builder": "3.1.1",
+    "@payloadcms/plugin-nested-docs": "3.1.1",
+    "@payloadcms/plugin-redirects": "3.1.1",
+    "@payloadcms/plugin-seo": "3.1.1",
+    "@payloadcms/plugin-stripe": "3.1.1",
+    "@payloadcms/richtext-lexical": "3.1.1",
+    "@payloadcms/storage-s3": "3.1.1",
     "@payloadcms/translations": "3.0.0-beta.29",
-    "@payloadcms/ui": "beta",
+    "@payloadcms/ui": "3.1.1",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -41,6 +42,7 @@
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
@@ -71,7 +73,7 @@
     "next-themes": "^0.3.0",
     "nuqs": "^2.0.4",
     "papaparse": "^5.4.1",
-    "payload": "beta",
+    "payload": "3.1.1",
     "payload-admin-bar": "^1.0.6",
     "prism-react-renderer": "^2.3.1",
     "qs": "^6.13.0",
