--- a/package.json
+++ b/package.json
@@ -16,20 +16,21 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
+    "@ai-stack/payloadcms": "3.2.1-beta",
     "@hookform/resolvers": "^3.9.0",
     "@number-flow/react": "^0.4.1",
-    "@payloadcms/db-mongodb": "3.1.1",
-    "@payloadcms/live-preview-react": "3.1.1",
-    "@payloadcms/next": "3.1.1",
-    "@payloadcms/plugin-form-builder": "3.1.1",
-    "@payloadcms/plugin-nested-docs": "3.1.1",
-    "@payloadcms/plugin-redirects": "3.1.1",
-    "@payloadcms/plugin-seo": "3.1.1",
-    "@payloadcms/plugin-stripe": "3.1.1",
-    "@payloadcms/richtext-lexical": "3.1.1",
-    "@payloadcms/storage-s3": "3.1.1",
-    "@payloadcms/translations": "3.0.0-beta.29",
-    "@payloadcms/ui": "3.1.1",
+    "@payloadcms/db-mongodb": "latest",
+    "@payloadcms/live-preview-react": "latest",
+    "@payloadcms/next": "latest",
+    "@payloadcms/plugin-form-builder": "latest",
+    "@payloadcms/plugin-nested-docs": "latest",
+    "@payloadcms/plugin-redirects": "latest",
+    "@payloadcms/plugin-seo": "latest",
+    "@payloadcms/plugin-stripe": "latest",
+    "@payloadcms/richtext-lexical": "latest",
+    "@payloadcms/storage-s3": "latest",
+    "@payloadcms/translations": "latest",
+    "@payloadcms/ui": "latest",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -65,7 +66,7 @@
     "geist": "^1.3.1",
     "graphql": "^16.9.0",
     "jsonwebtoken": "9.0.1",
-    "lexical": "0.18.0",
+    "lexical": "0.20.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.378.0",
     "next": "15.0.0",
@@ -73,7 +74,7 @@
     "next-themes": "^0.3.0",
     "nuqs": "^2.0.4",
     "papaparse": "^5.4.1",
-    "payload": "3.1.1",
+    "payload": "latest",
     "payload-admin-bar": "^1.0.6",
     "prism-react-renderer": "^2.3.1",
     "qs": "^6.13.0",
@@ -90,7 +91,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^13.1.6",
+    "@next/eslint-plugin-next": "15.0.3",
     "@payloadcms/eslint-config": "^1.1.1",
     "@tailwindcss/typography": "^0.5.13",
     "@types/escape-html": "^1.0.4",
@@ -106,7 +107,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.0",
     "postcss": "8.4.38",
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.1",
     "tailwindcss": "^3.4.14",
     "typescript": "5.6.3"
   },
