--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@t3-oss/env-nextjs": "^0.11.0",
     "@tanstack/react-query": "latest",
     "@tanstack/react-query-devtools": "latest",
+    "@vercel/speed-insights": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
