feat: moved to vercel blob

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@payloadcms/plugin-seo": "latest",
     "@payloadcms/richtext-lexical": "latest",
     "@payloadcms/storage-s3": "latest",
+    "@payloadcms/storage-vercel-blob": "^3.20.0",
     "@payloadcms/translations": "latest",
     "@payloadcms/ui": "latest",
     "@radix-ui/react-accordion": "^1.2.1",
@@ -58,6 +59,7 @@
     "@t3-oss/env-nextjs": "^0.11.0",
     "@tanstack/react-query": "latest",
     "@tanstack/react-query-devtools": "latest",
+    "@vercel/blob": "^0.27.1",
     "@vercel/speed-insights": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
