--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@lexical/headless": "0.21.0",
     "@number-flow/react": "^0.4.1",
     "@payloadcms/db-mongodb": "latest",
     "@payloadcms/live-preview-react": "latest",
@@ -90,6 +91,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "7.45.4",
     "react-icons": "^5.3.0",
+    "react-remove-scroll": "^2.6.3",
     "sharp": "0.32.6",
     "sonner": "^1.5.0",
     "stripe": "17.5.0",
