--- a/package.json
+++ b/package.json
@@ -89,9 +89,11 @@
     "qs": "^6.13.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-flip-toolkit": "^7.2.4",
     "react-hook-form": "7.45.4",
     "react-icons": "^5.3.0",
     "react-remove-scroll": "^2.6.3",
+    "react-transition-group": "^4.4.5",
     "sharp": "0.32.6",
     "sonner": "^1.5.0",
     "stripe": "17.5.0",
