--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@t3-oss/env-nextjs": "^0.11.0",
     "@tanstack/react-query": "latest",
     "@tanstack/react-query-devtools": "latest",
+    "@upstash/redis": "^1.34.4",
     "@vercel/blob": "^0.27.1",
     "@vercel/speed-insights": "^1.1.0",
     "class-variance-authority": "^0.7.0",
