--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-email/components": "^0.0.22",
     "@stitches/core": "^1.2.8",
-    "@stripe/react-stripe-js": "^2.7.3",
-    "@stripe/stripe-js": "^4.2.0",
+    "@stripe/react-stripe-js": "3.1.1",
+    "@stripe/stripe-js": "5.6.0",
     "@t3-oss/env-nextjs": "^0.11.0",
     "@tanstack/react-query": "latest",
     "@tanstack/react-query-devtools": "latest",
@@ -97,11 +97,12 @@
     "react-transition-group": "^4.4.5",
     "sharp": "0.32.6",
     "sonner": "^1.5.0",
-    "stripe": "17.5.0",
+    "stripe": "17.6.0",
     "tailwind-merge": "^2.4.0",
     "tailwind-scrollbar": "^3.1.0",
     "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.5",
     "vaul": "1.1.2",
     "zod": "^3.23.8"
   },
