--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,45 @@
-# Database connection string
-DATABASE_URI=mongodb://127.0.0.1/payload-template-website
 
 # Used to encrypt JWT tokens
 PAYLOAD_SECRET=YOUR_SECRET_HERE
-
 # Used to format links and URLs
-PAYLOAD_PUBLIC_SERVER_URL=http://localhost:3000
 NEXT_PUBLIC_SERVER_URL=http://localhost:3000
-
 # Allow robots to index the site (optional)
 NEXT_PUBLIC_IS_LIVE=
-
 # Used to preview drafts
-PAYLOAD_PUBLIC_DRAFT_SECRET=demo-draft-secret
 NEXT_PRIVATE_DRAFT_SECRET=demo-draft-secret
-
 # Used to revalidate static pages
 REVALIDATION_KEY=demo-revalation-key
-NEXT_PRIVATE_REVALIDATION_KEY=demo-revalation-key
+# Database connection string
+DATABASE_URI=mongodb://127.0.0.1/test-cluster
+# Vercel Blob storage token
+BLOB_READ_WRITE_TOKEN=vercel_blob_rw_token
+# zoho
+ZOHO_CLIENT_ID=
+ZOHO_CLIENT_SECRET=
+ZOHO_REDIRECT_URI=
+ZOHO_REFRESH_TOKEN=
+# resend
+RESEND_API_KEY=
+# stripe
+NEXT_PUBLIC_STRIPE_IS_TEST_KEY=true
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_token
+STRIPE_SECRET_KEY=sk_test_token
+# Used to encrypt JWT tokens
+PAYLOAD_SECRET=secret
+# Used to format links and URLs
+NEXT_PUBLIC_SERVER_URL=http://localhost:3000
+NEXT_PUBLIC_URL=http://localhost:3000
+# Allow robots to index the site (optional)
+NEXT_PUBLIC_IS_LIVE=false
+# Used to preview drafts
+NEXT_PUBLIC_DRAFT_SECRET=secret
+# Used to revalidate static pages
+REVALIDATION_KEY=key-revalidate
+# Used to enable logging of errors and hooks
+NEXT_PUBLIC_CONSOLE_DEBUG_HOOKS=false
+# OpenAI API key
+OPENAI_API_KEY=sk-proj-key
+# Upstash Redis URL
+UPSTASH_REDIS_REST_URL=https://token.upstash.io
+# Upstash Redis token
+UPSTASH_REDIS_REST_TOKEN=token
