feat: update metadata + attempt to make sitemap generation function

--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "type": "module",
   "scripts": {
     "build": "cross-env NODE_OPTIONS=--no-deprecation next build",
-    "postbuild": "next-sitemap --config next-sitemap.config.cjs",
     "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev",
     "dev:prod": "cross-env NODE_OPTIONS=--no-deprecation rm -rf .next && pnpm build && pnpm start",
     "generate:importmap": "cross-env NODE_OPTIONS=--no-deprecation payload generate:importmap",
@@ -19,9 +18,9 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
+    "@hookform/resolvers": "latest",
     "@lexical/headless": "0.21.0",
-    "@number-flow/react": "^0.4.1",
+    "@number-flow/react": "latest",
     "@payloadcms/db-mongodb": "latest",
     "@payloadcms/live-preview-react": "latest",
     "@payloadcms/next": "latest",
@@ -31,33 +30,32 @@
     "@payloadcms/plugin-seo": "latest",
     "@payloadcms/richtext-lexical": "latest",
     "@payloadcms/storage-s3": "latest",
-    "@payloadcms/storage-vercel-blob": "^3.20.0",
+    "@payloadcms/storage-vercel-blob": "latest",
     "@payloadcms/translations": "latest",
     "@payloadcms/ui": "latest",
-    "@radix-ui/react-accordion": "^1.2.1",
-    "@radix-ui/react-aspect-ratio": "^1.1.1",
-    "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-collapsible": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-navigation-menu": "^1.2.0",
-    "@radix-ui/react-popover": "^1.1.1",
-    "@radix-ui/react-radio-group": "^1.2.0",
-    "@radix-ui/react-scroll-area": "^1.1.0",
-    "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slider": "^1.2.1",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-tabs": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.1",
-    "@radix-ui/react-tooltip": "^1.1.2",
+    "@radix-ui/react-accordion": "latest",
+    "@radix-ui/react-aspect-ratio": "latest",
+    "@radix-ui/react-checkbox": "latest",
+    "@radix-ui/react-collapsible": "latest",
+    "@radix-ui/react-dialog": "latest",
+    "@radix-ui/react-dropdown-menu": "latest",
+    "@radix-ui/react-icons": "latest",
+    "@radix-ui/react-label": "latest",
+    "@radix-ui/react-navigation-menu": "latest",
+    "@radix-ui/react-popover": "latest",
+    "@radix-ui/react-radio-group": "latest",
+    "@radix-ui/react-scroll-area": "latest",
+    "@radix-ui/react-select": "latest",
+    "@radix-ui/react-separator": "latest",
+    "@radix-ui/react-slider": "latest",
+    "@radix-ui/react-slot": "latest",
+    "@radix-ui/react-tabs": "latest",
+    "@radix-ui/react-toast": "latest",
+    "@radix-ui/react-tooltip": "latest",
     "@react-email/components": "^0.0.22",
     "@stitches/core": "^1.2.8",
     "@stripe/react-stripe-js": "3.1.1",
     "@stripe/stripe-js": "5.6.0",
-    "@t3-oss/env-nextjs": "^0.11.0",
     "@tanstack/react-query": "latest",
     "@tanstack/react-query-devtools": "latest",
     "@upstash/redis": "^1.34.4",
@@ -70,41 +68,37 @@
     "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-fade": "^8.3.0",
     "embla-carousel-react": "^8.5.2",
-    "framer-motion": "12.0.0-alpha.0",
+    "motion": "latest",
     "geist": "^1.3.1",
     "graphql": "^16.9.0",
     "jsonwebtoken": "9.0.1",
     "lexical": "0.21.0",
-    "lodash": "^4.17.21",
-    "lucide-react": "^0.378.0",
-    "next": "15.1.0",
-    "next-intl": "^3.17.2",
-    "next-safe-action": "^7.10.2",
-    "next-sitemap": "^4.2.3",
-    "next-themes": "^0.3.0",
-    "nuqs": "^2.0.4",
-    "papaparse": "^5.4.1",
+    "lodash": "latest",
+    "lucide-react": "latest",
+    "next": "latest",
+    "next-intl": "latest",
+    "next-safe-action": "latest",
+    "next-themes": "latest",
+    "nuqs": "latest",
+    "papaparse": "latest",
     "payload": "latest",
-    "payload-admin-bar": "^1.0.6",
-    "prism-react-renderer": "^2.3.1",
-    "qs": "^6.13.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-flip-toolkit": "^7.2.4",
-    "react-hook-form": "7.45.4",
-    "react-icons": "^5.3.0",
-    "react-remove-scroll": "^2.6.3",
-    "react-transition-group": "^4.4.5",
-    "sharp": "0.32.6",
-    "sonner": "^1.5.0",
-    "stripe": "17.6.0",
-    "tailwind-merge": "^2.4.0",
-    "tailwind-scrollbar": "^3.1.0",
-    "tailwind-scrollbar-hide": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7",
-    "uuid": "^11.0.5",
-    "vaul": "1.1.2",
-    "zod": "^3.23.8"
+    "prism-react-renderer": "latest",
+    "qs": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-hook-form": "latest",
+    "react-icons": "latest",
+    "react-remove-scroll": "latest",
+    "sharp": "latest",
+    "sonner": "latest",
+    "stripe": "latest",
+    "tailwind-merge": "latest",
+    "tailwind-scrollbar": "latest",
+    "tailwind-scrollbar-hide": "latest",
+    "tailwindcss-animate": "latest",
+    "uuid": "latest",
+    "vaul": "latest",
+    "zod": "latest"
   },
   "devDependencies": {
     "@eslint-react/eslint-plugin": "^1.23.2",
