--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@hookform/resolvers": "latest",
     "@lexical/headless": "0.21.0",
     "@number-flow/react": "latest",
-    "@payloadcms/db-mongodb": "latest",
+    "@payloadcms/db-vercel-postgres": "latest",
     "@payloadcms/live-preview-react": "latest",
     "@payloadcms/next": "latest",
     "@payloadcms/plugin-form-builder": "latest",
@@ -69,13 +69,13 @@
     "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-fade": "^8.3.0",
     "embla-carousel-react": "^8.5.2",
-    "motion": "latest",
     "geist": "^1.3.1",
     "graphql": "^16.9.0",
     "jsonwebtoken": "9.0.1",
     "lexical": "0.21.0",
     "lodash": "latest",
     "lucide-react": "latest",
+    "motion": "latest",
     "next": "latest",
     "next-intl": "latest",
     "next-safe-action": "latest",
