feat: make pg work + admin improvements

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@lexical/headless": "0.21.0",
     "@number-flow/react": "latest",
     "@payloadcms/db-vercel-postgres": "latest",
+    "@payloadcms/email-nodemailer": "^3.23.0",
     "@payloadcms/live-preview-react": "latest",
     "@payloadcms/next": "latest",
     "@payloadcms/plugin-form-builder": "latest",
@@ -80,6 +81,7 @@
     "next-intl": "latest",
     "next-safe-action": "latest",
     "next-themes": "latest",
+    "nodemailer": "^6.10.0",
     "nuqs": "latest",
     "papaparse": "latest",
     "payload": "latest",
@@ -114,12 +116,14 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.7",
     "@types/node": "22.5.4",
+    "@types/nodemailer": "^6.4.17",
     "@types/papaparse": "^5.3.15",
     "@types/qs": "^6.9.15",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.1",
     "autoprefixer": "^10.4.20",
     "copyfiles": "^2.4.1",
+    "drizzle-kit": "^0.28.0",
     "eslint": "^9.18.0",
     "eslint-config-next": "15.1.0",
     "eslint-plugin-react-hooks": "^5.1.0",
