--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ NEXT_PRIVATE_DRAFT_SECRET=demo-draft-secret
 # Used to revalidate static pages
 REVALIDATION_KEY=demo-revalation-key
 # Database connection string
-DATABASE_URI=mongodb://127.0.0.1/test-cluster
+DATABASE_URL=mongodb://127.0.0.1/test-cluster
 # Vercel Blob storage token
 BLOB_READ_WRITE_TOKEN=vercel_blob_rw_token
 # zoho
