--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,13 @@ node_modules
 .env
 .next
 .vercel
+.vscode
 
 # Payload default media upload directory
 public/media/
 public/blob/
+
+docs/data/
 
 # Payload default media upload directory
 public/ht/
