--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bonavista-v2",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "BonaVista Website",
   "license": "MIT",
   "type": "module",
@@ -24,7 +24,7 @@
     "@lexical/headless": "0.21.0",
     "@number-flow/react": "latest",
     "@payloadcms/db-vercel-postgres": "latest",
-    "@payloadcms/email-nodemailer": "^3.23.0",
+    "@payloadcms/email-nodemailer": "latest",
     "@payloadcms/live-preview-react": "latest",
     "@payloadcms/next": "latest",
     "@payloadcms/plugin-form-builder": "latest",
@@ -55,22 +55,22 @@
     "@radix-ui/react-tabs": "latest",
     "@radix-ui/react-toast": "latest",
     "@radix-ui/react-tooltip": "latest",
-    "@react-email/components": "^0.0.22",
-    "@stitches/core": "^1.2.8",
-    "@stripe/react-stripe-js": "3.1.1",
-    "@stripe/stripe-js": "5.6.0",
+    "@react-email/components": "latest",
+    "@stitches/core": "latest",
+    "@stripe/react-stripe-js": "latest",
+    "@stripe/stripe-js": "latest",
     "@tanstack/react-query": "latest",
     "@tanstack/react-query-devtools": "latest",
-    "@upstash/redis": "^1.34.4",
-    "@vercel/blob": "^0.27.1",
-    "@vercel/speed-insights": "^1.1.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "cmdk": "1.0.4",
-    "cross-env": "^7.0.3",
-    "embla-carousel-autoplay": "^8.3.0",
-    "embla-carousel-fade": "^8.3.0",
-    "embla-carousel-react": "^8.5.2",
+    "@upstash/redis": "latest",
+    "@vercel/blob": "latest",
+    "@vercel/speed-insights": "latest",
+    "class-variance-authority": "latest",
+    "clsx": "latest",
+    "cmdk": "latest",
+    "cross-env": "latest",
+    "embla-carousel-autoplay": "latest",
+    "embla-carousel-fade": "latest",
+    "embla-carousel-react": "latest",
     "geist": "^1.3.1",
     "graphql": "^16.9.0",
     "jsonwebtoken": "9.0.1",
@@ -107,7 +107,7 @@
   "devDependencies": {
     "@eslint-react/eslint-plugin": "^1.23.2",
     "@eslint/eslintrc": "^3.2.0",
-    "@next/eslint-plugin-next": "^15.1.0",
+    "@next/eslint-plugin-next": "latest",
     "@payloadcms/eslint-config": "3.9.0",
     "@tailwindcss/typography": "^0.5.13",
     "@types/bun": "^1.2.2",
@@ -116,7 +116,7 @@
     "@types/eslint__eslintrc": "^2.1.2",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.7",
-    "@types/node": "22.5.4",
+    "@types/node": "latest",
     "@types/nodemailer": "^6.4.17",
     "@types/papaparse": "^5.3.15",
     "@types/qs": "^6.9.15",
@@ -135,8 +135,5 @@
     "prettier": "^3.4.2",
     "tailwindcss": "3.4.17",
     "typescript": "5.7.2"
-  },
-  "engines": {
-    "node": "^18.20.2 || >=20.9.0"
   }
 }
