--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "ci": "payload migrate && pnpm build && pnpm sitemap:generate"
   },
   "dependencies": {
-    "@hookform/resolvers": "latest",
+    "@hookform/resolvers": "^4.1.2",
     "@lexical/headless": "0.21.0",
     "@number-flow/react": "latest",
     "@payloadcms/db-vercel-postgres": "latest",
@@ -36,25 +36,25 @@
     "@payloadcms/storage-vercel-blob": "latest",
     "@payloadcms/translations": "latest",
     "@payloadcms/ui": "latest",
-    "@radix-ui/react-accordion": "latest",
-    "@radix-ui/react-aspect-ratio": "latest",
-    "@radix-ui/react-checkbox": "latest",
-    "@radix-ui/react-collapsible": "latest",
-    "@radix-ui/react-dialog": "latest",
-    "@radix-ui/react-dropdown-menu": "latest",
-    "@radix-ui/react-icons": "latest",
-    "@radix-ui/react-label": "latest",
-    "@radix-ui/react-navigation-menu": "latest",
-    "@radix-ui/react-popover": "latest",
-    "@radix-ui/react-radio-group": "latest",
-    "@radix-ui/react-scroll-area": "latest",
-    "@radix-ui/react-select": "latest",
-    "@radix-ui/react-separator": "latest",
-    "@radix-ui/react-slider": "latest",
-    "@radix-ui/react-slot": "latest",
-    "@radix-ui/react-tabs": "latest",
-    "@radix-ui/react-toast": "latest",
-    "@radix-ui/react-tooltip": "latest",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-aspect-ratio": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-navigation-menu": "^1.2.5",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slider": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@react-email/components": "latest",
     "@stitches/core": "latest",
     "@stripe/react-stripe-js": "latest",
@@ -65,18 +65,18 @@
     "@vercel/blob": "latest",
     "@vercel/speed-insights": "latest",
     "class-variance-authority": "latest",
-    "clsx": "latest",
-    "cmdk": "latest",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "cross-env": "latest",
     "embla-carousel-autoplay": "latest",
     "embla-carousel-fade": "latest",
-    "embla-carousel-react": "latest",
+    "embla-carousel-react": "^8.5.2",
     "geist": "^1.3.1",
-    "graphql": "^16.9.0",
+    "graphql": "^16.10.0",
     "jsonwebtoken": "9.0.1",
     "lexical": "0.21.0",
     "lodash": "latest",
-    "lucide-react": "latest",
+    "lucide-react": "^0.477.0",
     "motion": "latest",
     "next": "latest",
     "next-intl": "latest",
@@ -86,11 +86,12 @@
     "nuqs": "latest",
     "papaparse": "latest",
     "payload": "latest",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "prism-react-renderer": "latest",
     "qs": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "react-hook-form": "latest",
+    "react-hook-form": "^7.54.2",
     "react-icons": "latest",
     "react-remove-scroll": "latest",
     "sharp": "latest",
@@ -102,38 +103,37 @@
     "tailwindcss-animate": "latest",
     "uuid": "latest",
     "vaul": "latest",
-    "zod": "latest"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@eslint-react/eslint-plugin": "^1.23.2",
-    "@eslint/eslintrc": "^3.2.0",
+    "@eslint-react/eslint-plugin": "^1.29.0",
+    "@eslint/eslintrc": "^3.3.0",
     "@next/eslint-plugin-next": "latest",
     "@payloadcms/eslint-config": "3.9.0",
-    "@tailwindcss/typography": "^0.5.13",
-    "@types/bun": "^1.2.2",
+    "@tailwindcss/postcss": "^4.0.9",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/bun": "^1.2.4",
     "@types/escape-html": "^1.0.4",
     "@types/eslint": "9.6.1",
     "@types/eslint__eslintrc": "^2.1.2",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/lodash": "^4.17.7",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/lodash": "^4.17.16",
     "@types/node": "latest",
     "@types/nodemailer": "^6.4.17",
     "@types/papaparse": "^5.3.15",
-    "@types/qs": "^6.9.15",
+    "@types/qs": "^6.9.18",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.1",
-    "autoprefixer": "^10.4.20",
     "copyfiles": "^2.4.1",
-    "drizzle-kit": "^0.28.0",
-    "eslint": "^9.18.0",
-    "eslint-config-next": "15.1.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
-    "eslint-plugin-tailwindcss": "^3.17.5",
+    "drizzle-kit": "^0.28.1",
+    "eslint": "^9.21.0",
+    "eslint-config-next": "15.2.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
     "jest": "^29.7.0",
-    "postcss": "8.4.38",
-    "prettier": "^3.4.2",
-    "tailwindcss": "3.4.17",
+    "postcss": "latest",
+    "prettier": "^3.5.2",
+    "tailwindcss": "latest",
     "typescript": "5.7.2"
   }
 }
