feat: add ecom order emails

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,13 @@ ZOHO_REDIRECT_URI=
 ZOHO_REFRESH_TOKEN=
 # resend
 RESEND_API_KEY=
+# node mailer
+DEFAULT_FROM_ADDRESS=
+DEFAULT_FROM_NAME=
+NODEMAILER_HOST=
+NODEMAILER_PORT=
+NODEMAILER_USER=
+NODEMAILER_PASS=
 # stripe
 NEXT_PUBLIC_STRIPE_IS_TEST_KEY=true
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_token
