--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@react-email/components": "latest",
+    "@react-email/components": "^0.0.33",
     "@stitches/core": "latest",
     "@stripe/react-stripe-js": "latest",
     "@stripe/stripe-js": "latest",
@@ -132,7 +132,8 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "jest": "^29.7.0",
     "postcss": "latest",
-    "prettier": "^3.5.2",
+    "prettier": "3.4.2",
+    "react-email": "3.0.7",
     "tailwindcss": "latest",
     "typescript": "5.7.2"
   }
