feat: fix checkout step bug - still need to correctly handle all step logic

--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "react-remove-scroll": "latest",
     "sharp": "latest",
     "sonner": "latest",
-    "stripe": "latest",
+    "stripe": "17.7.0",
     "tailwind-merge": "latest",
     "tailwind-scrollbar": "latest",
     "tailwind-scrollbar-hide": "latest",
